<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.alejoaj.practica1_p2.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/loggin"
                android:textColor= "@color/black"
                android:textSize = "25sp"
                android:id="@+id/tLogguin"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/iloggin"
                android:inputType="text"
                android:id="@+id/eLoggin" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Password"
                android:textColor= "@color/black"
                android:textSize = "25sp"
                android:id="@+id/textpassword"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/iloggin"
                android:inputType="textPassword"
                android:id="@+id/ePassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rPassword"
                android:textColor= "@color/black"
                android:textSize = "25sp"
                android:id="@+id/repetir"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/iloggin"
                android:inputType="textPassword"
                android:id="@+id/eRPassword" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/Email"
                android:textColor= "@color/black"
                android:textSize = "25sp"
                android:id="@+id/textView"
                android:gravity="center"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/iloggin"
                android:inputType="textEmailAddress"
                android:id="@+id/eEmail" />
        </LinearLayout>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino"
                android:onClick="onRadioButtonClicked"/>

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@color/orange"
                android:hint="@string/Fecha"
                android:textColorHint="@color/white"
                android:padding="15dp"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor= "@color/black"
                android:text="@string/Ciudad"
                android:textSize = "25sp"
                android:gravity="center"/>
            <Spinner
                android:id="@+id/sCiudad"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor= "@color/black"
                android:layout_height="wrap_content"
                android:textSize = "17sp"
                android:text="@string/Hobbies"
                android:gravity="center_vertical"/>
            <CheckBox
                android:textSize="9sp"
                android:id="@+id/cCine"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cine"
                android:onClick="onCheckboxClicked"
                android:gravity="center_vertical"/>
            <CheckBox android:id="@+id/cComida"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/comer"
                android:textSize = "9sp"
                android:onClick="onCheckboxClicked"
                android:gravity="center_vertical"/>
            <CheckBox android:id="@+id/cMusica"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/musica"
                android:textSize = "9sp"
                android:onClick="onCheckboxClicked"
                android:gravity="center_vertical"/>
            <CheckBox android:id="@+id/cDeporte"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/deporte"
                android:textSize = "9sp"
                android:onClick="onCheckboxClicked"
                android:gravity="center_vertical"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Aceptar"
                android:textColor="@color/white"
                android:background="@color/orangered"
                android:gravity="center"
                android:textSize="25sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:id="@+id/bAceptar"
                android:onClick="Aceptar"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:textColor="@color/green"
                android:textSize="20dp"
                android:id="@+id/tinfo"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
